# autonomous-vtuber

./: .env.example  .gitignore  Dockerfile  README.md  autonomous_vtuber_agent_a71c59bc.plan.md  docker-compose.yml  pyproject.toml  render.yaml
agents/: analytics.py  chat_agent.py  clip_agent.py  donation_goals.py  orchestrator.py  performer.py  retrospective.py  subscriber_tracker.py
core/: bandit.py  config.py  db.py  event_bus.py  interfaces.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: RealtimeProvider.tsx  globals.css  layout.tsx  page.tsx
dashboard/src/components/: DonationAlert.tsx  DonationFeed.tsx  MetricCard.tsx  RevenueChart.tsx  Sidebar.tsx  StatusBar.tsx
dashboard/src/hooks/: useRealtimeMetrics.ts
dashboard/src/stores/: donations.ts  metrics.ts  stream.ts
docs/plans/: 2026-02-27-analytics-websocket-and-self-improvement-loop.md  2026-02-27-frontend-dashboard.md  2026-02-27-quad-agent-swarm-execution.md
integrations/: modulate.py
persona/: character.md
streamer/: capture.py  ffmpeg_pipe.py  main.py
tests/: test_analytics.py  test_bandit.py  test_chat_agent.py  test_db.py  test_donation_goals.py  test_event_bus.py  test_ffmpeg_pipe.py  test_orchestrator.py  test_performer.py  test_retrospective.py  test_subscriber_tracker.py  test_twitch_client.py
twitch_client/: bridge.py  main.py  priority_queue.py
