[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomous-vtuber"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "twitchio>=2.10.0",
    "neo4j>=5.20.0",
    "redis>=5.0.0",
    "playwright>=1.44.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "pytest-mock>=3.14.0"]
